// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`testExpensesSummaryWithMultipleExpenses 1`] = `
<body>
  <div>
    <div>
      <h1>
        Viewing 
        3
         
        expenses
         totalling 
        $1,141.95
      </h1>
    </div>
  </div>
</body>
`;

exports[`testExpensesSummaryWithSingleExpense 1`] = `
<body>
  <div>
    <div>
      <h1>
        Viewing 
        1
         
        expense
         totalling 
        $2.35
      </h1>
    </div>
  </div>
</body>
`;
